care/force-app/main/default/objects/Article_Voting_Stat__c/Article_Voting_Stat__c.object-meta.xml
<CustomObject>
    <description>Custom Object to track if the Article was helpful or not</description>
    <label>Article Voting Stat</label>
    <nameField>
        <displayFormat>AV-{0000}</displayFormat>
        <label>Article Vote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Voting Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>