care/force-app/main/default/objects/Article_Voting_Stat__c/fields/Care_ID__c.field-meta.xml
<CustomField>
    <fullName>Care_ID__c</fullName>
    <label>Care ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>