care/force-app/main/default/objects/Article_Voting_Stat__c/fields/Did_you_get_the_Help_you_needed__c.field-meta.xml
<CustomField>
    <fullName>Did_you_get_the_Help_you_needed__c</fullName>
    <description>Picklist that counts if article was helpful</description>
    <label>Did you get the Help you needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>