care/force-app/main/default/objects/Article_Voting_Stat__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <label>Knowledge Article</label>
    <referenceTo>US_Knowledge__kav</referenceTo>
    <relationshipLabel>Article Voting Stats</relationshipLabel>
    <relationshipName>Article_Voting_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>